--- a/src/Table/Table.module.css
+++ b/src/Table/Table.module.css
@@ -7,6 +7,7 @@
 }
 
 .Table {
+  --table-sticky-z-index: 5;
   --table-cell-padding-x: 0.3rem;
   --table-cell-padding-y: 0.35rem;
   --table-section-padding: 0.3rem;
@@ -86,7 +87,7 @@
     padding-right: var(--table-cell-padding-x);
     font-weight: bold;
     font-size: var(--size-14);
-    z-index: 5;
+    z-index: var(--table-sticky-z-index, 5);
 
     small {
       font-size: inherit;
